# parts-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: checks.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth_router.py  health_router.py  part_router.py  user_router.py
app/core/: config.py  logging.py  security.py
app/models/: __init__.py  base.py  part.py  user.py
app/repositories/: base_repository.py  part_repository.py  user_repository.py
app/schemas/: part_schema.py  security_schema.py  user_schema.py
app/services/: part_service.py  security_service.py  user_service.py
app/utils/: validation.py
deployment/: render.yaml
deployment/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 2025_04_26_1530_6d1b4ce506d6_add_initial_part_and_user_table.py  2025_04_27_1407_01013e86c447_add_part_visibility_and_user_roles.py
tests/: conftest.py
tests/api/: test_health.py  test_part_api.py
tests/constants/: user.py
tests/factories/: part_factory.py  user_factory.py
tests/fixtures/: authorization.py
tests/services/: test_part_service.py
